--- a/oe2020/project1/_config.yml
+++ b/oe2020/project1/_config.yml
@@ -4,5 +4,15 @@ show_downloads: false
 google_analytics:
 theme: jekyll-theme-dinky
 
+baseurl:          https://tetherless-world.github.io/ontology-engineering/oe2020/project1/
+
+paginate:         5
+
+# Custom vars
+version:          2.1.0
+
+github:
+  repo:   https://github.com/tetherless-world/ontology-engineering/tree/master/oe2020/project1
+  
 sass:
   sass_dir: assets\css
