--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-dinky
+title: Ontology Engineering
+github:
+  repo:           https://github.com/tetherless-world/ontology-engineering
