--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-dinky
-title: Ontology Engineering
+title: Ontology Engineering Class
+description: Offered at RPI, Fall 2020
 github:
   repo:           https://github.com/tetherless-world/ontology-engineering
