Read hygiene junit results in circleci job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
       - run:
           name: Run hygiene tests
           command: .hygiene/run_hygiene.sh
+      - store_test_results:
+          path: /output
 workflows:
   version: 2.1
   build_and_test:
