--- a/.hygiene/docker-compose.yml
+++ b/.hygiene/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       # See set_env.sh
       - ONTPUB_FAMILY
+      - HYGIENE_FAIL_ON_WARNINGS
       - HYGIENE_TEST_SUBDIR
       - ONTPUB_SUBDIR
       - ONTPUB_EXCLUDED
