use buildpack-deps image for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   hygiene_tests:
     working_directory: /git/ontology-hygiene-tests
     docker:
-      - image: docker/compose:debian-1.26.2
+      - image: circleci/buildpack-deps
     steps:
       - checkout
       - setup_remote_docker
