fix store_artifacts in circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run:
           name: Update CA Certificates
           command: update-ca-certificates
-      - store artifacts:
+      - store_artifacts:
           path: /output
       - store_test_results:
           path: /output
