--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           command: .hygiene/run_hygiene.sh
       - run:
           name: Update CA Certificates
-          command: apt update && apt install -y ca-Certificates
+          command: apt update && apt install -y ca-certificates
       - store_artifacts:
           path: /output
       - store_test_results:
