add tool to verify hygiene junit xml output

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,18 @@
 version: 2.1
 jobs:
   hygiene_tests:
-    working_directory: /git/ontology-hygiene-tests
     docker:
-      - image: docker/compose:debian-1.26.2
+      - image: circleci/node:10
     steps:
       - checkout
       - setup_remote_docker
       - run:
           name: Run hygiene tests
-          command: .hygiene/run_hygiene.sh
-      - run:
-          name: Update CA Certificates
-          command: apt update && apt install -y ca-certificates
+          command: bash -xeo pipefail .hygiene/run_hygiene.sh
       - store_artifacts:
-          path: /output
+          path: output
       - store_test_results:
-          path: /output
+          path: output
 workflows:
   version: 2.1
   build_and_test:
