update circleci artifact refs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,9 @@ jobs:
           name: Run hygiene tests
           command: bash -xeo pipefail .hygiene/run_hygiene.sh
       - store_artifacts:
-          path: output
+          path: .hygiene/output
       - store_test_results:
-          path: output
+          path: .hygiene/output
 workflows:
   version: 2.1
   build_and_test:
