--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ theme: jekyll-theme-dinky
 title: Ontology Engineering Class
 description: Offered at RPI, Fall 2020
 github:
-  repo:           https://github.com/tetherless-world/ontology-engineering
+  repo: https://github.com/tetherless-world/ontology-engineering
+repository: https://github.com/tetherless-world/ontology-engineering
