update repository config

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Ontology Engineering Class
 description: Offered at RPI, Fall 2020
 github:
   repo: https://github.com/tetherless-world/ontology-engineering
-repository: https://github.com/tetherless-world/ontology-engineering
+repository: git@github.com/tetherless-world/ontology-engineering.git
