--- a/_data/years/2020/projects/project1.yml
+++ b/_data/years/2020/projects/project1.yml
@@ -1,7 +1,15 @@
 name: Project One
 path: project1
 pages:
-  - name: Sub Page
-    path: sub_page
-  - name: Other Page
-    path: other_page
+  -name: About
+   path: index
+ - name: Use Case
+   path: sub_page
+ - name: Conceptual Model and Ontology
+   path: sub_page
+ - name: Demonstration and Queries
+   path: other_page
+ - name: Presentations
+   path: sub_page
+ - name: Getting Involved
+   path: other_page
