--- a/_data/years/2020/projects/project1.yml
+++ b/_data/years/2020/projects/project1.yml
@@ -2,7 +2,7 @@ name: Project One
 path: project1
 pages:
   -name: About
-   path: index
+   path: sub_page
  - name: Use Case
    path: sub_page
  - name: Conceptual Model and Ontology
