--- a/_data/years/2020/projects/project1.yml
+++ b/_data/years/2020/projects/project1.yml
@@ -1,7 +1,15 @@
 name: Project One
 path: project1
 pages:
-  - name: Sub Page 2
-    path: sub_page
-  - name: Other Page 2
+  - name: About Project
+    path: index
+  - name: Use Case
+    path: other_page
+  - name: Conceptual Model and Ontology
+    path: other_page
+  - name: Demonstration and Queries
+    path: other_page
+  - name: Presentations
+    path: other_page
+  - name: Getting Involved
     path: other_page
