--- a/_data/years/2020/projects/project1.yml
+++ b/_data/years/2020/projects/project1.yml
@@ -5,9 +5,9 @@ pages:
     path: index
   - name: Use Case
     path: other_page
-  - name: Conceptual Model and Ontology
+  - name: Concept Map & Ontology
     path: other_page
-  - name: Demonstration and Queries
+  - name: Demonstration & Queries
     path: other_page
   - name: Presentations
     path: other_page
