--- a/_data/years/2020/projects/project1.yml
+++ b/_data/years/2020/projects/project1.yml
@@ -6,9 +6,9 @@ pages:
   - name: Use Case
     path: other_page
   - name: Concept Map & Ontology
-    path: other_page
+    path: ontology
   - name: Demonstration & Queries
-    path: other_page
+    path: queries
   - name: Presentations
     path: other_page
   - name: Getting Involved
