--- a/_data/years/2020/projects/project1.yml
+++ b/_data/years/2020/projects/project1.yml
@@ -4,7 +4,7 @@ pages:
   - name: About Project
     path: index
   - name: Use Case
-    path: other_page
+    path: usecase
   - name: Concept Map & Ontology
     path: ontology
   - name: Demonstration & Queries
