--- a/_data/years/2020/projects/project1.yml
+++ b/_data/years/2020/projects/project1.yml
@@ -3,6 +3,8 @@ path: project1
 pages:
   - name: About Project
     path: index
+  - name: Design
+    path: none
   - name: Use Case
     path: usecase
   - name: Concept Map & Ontology
