Refactor nav menu data

--- a/_data/years/2020.yml
+++ b/_data/years/2020.yml
@@ -1,10 +1,14 @@
-name: Project One
-path: project1
-pages:
+name: OE 2020
+path: oe2020
+projects:
+  - name: Project One
+    path: project1
+  - name: Project Two
+    path: project2
+project_nav:
   - name: About Project
     path: index
-  - name: Design
-    path: none
+  - section: Design
   - name: Use Case
     path: usecase
   - name: Concept Map & Ontology
