add more project menu sections

--- a/_data/years/2020.yml
+++ b/_data/years/2020.yml
@@ -13,9 +13,11 @@ project_nav:
     path: usecase
   - name: Concept Map & Ontology
     path: ontology
+  - section: Resources
   - name: Demonstration & Queries
     path: queries
   - name: Presentations
     path: other_page
+  - section: Contact
   - name: Getting Involved
     path: gettinginvolved
