--- a/_data/years/2020.yml
+++ b/_data/years/2020.yml
@@ -11,8 +11,17 @@ project_nav:
   - section: Design
   - name: Use Case
     path: usecase
+  - name: Terminology List
+    path: termlist
   - name: Concept Map & Ontology
     path: ontology
+  - section: Research
+  - name: Publications
+    path: publications
+  - name: Related Work
+    path: related_work
+  - name: License
+    path: license 
   - section: Resources
   - name: Demonstration & Queries
     path: queries
@@ -21,3 +30,5 @@ project_nav:
   - section: Contact
   - name: Getting Involved
     path: gettinginvolved
+ 
+  
