--- a/_data/years/2020.yml
+++ b/_data/years/2020.yml
@@ -26,7 +26,7 @@ project_nav:
   - name: Demonstration & Queries
     path: queries
   - name: Presentations
-    path: other_page
+    path: presentations
   - section: Contact
   - name: Getting Involved
     path: gettinginvolved
