Finalize project template

--- a/_data/years/2020.yml
+++ b/_data/years/2020.yml
@@ -3,8 +3,8 @@ path: oe2020
 projects:
   - name: Project One
     path: project1
-  - name: Project Two
-    path: project2
+  - name: Project Template
+    path: project_template
 project_nav:
   - name: About Project
     path: index
@@ -21,14 +21,14 @@ project_nav:
   - name: Related Work
     path: related_work
   - name: License
-    path: license 
+    path: license
   - section: Resources
   - name: Demonstration & Queries
-    path: queries
+    path: demo
   - name: Presentations
     path: presentations
   - section: Contact
   - name: Getting Involved
     path: gettinginvolved
- 
-  
+
+
