up query doc, adding to demo.md in a sec

--- a/oe2020/course-recommender/queries/Makefile
+++ b/oe2020/course-recommender/queries/Makefile
@@ -1,2 +1,2 @@
 build_hw_out:
-	cat *.sparql > OE_12_CourseRecommender_SPARQLQueries.txt # txt cuz agregate
+	cat *.sparql > OE_13_CourseRecommender_SPARQLQueries.sparql # txt cuz agregate
