add new projects

--- a/_data/years/2022.yml
+++ b/_data/years/2022.yml
@@ -1,6 +1,10 @@
 name: Fall 2022
 path: oe2022
 projects:
+  - name: Dog Breed Ontology
+    path: dog-breed-ontology
+  - name: Indoor Environmental Management System
+    path: indoor-environment-manager
   - name: Example Project
     path: example
 project_nav:
