--- a/_data/years/2024.yml
+++ b/_data/years/2024.yml
@@ -2,9 +2,9 @@ name: Fall 2024
 path: oe2024
 projects:
   - name: Fit Me!
-  - path: https://fit-me.netlify.app/oe2024/fit-me/ 
+  - path: https://fit-me--rpi-ontology-engineering.netlify.app/oe2024/fit-me
   - name: Personalized Depression Treatment 
-  - path: https://personalized-depression-treatment-ontology.netlify.app/oe2024/personalized-depression-treatment-ontology/ 
+  - path: https://personalized-depression-treatment-ontology--rpi-ontology-engineeting.netlify.app/oe2024/personalized-depression-treatment-ontology/ 
   - name: Tea Recommender 
   - path: https://tea-recommender--rpi-ontology-engineering.netlify.app/oe2024/tea-recommender/ 
   - name: When to Go Where 
