--- a/_data/years/2024.yml
+++ b/_data/years/2024.yml
@@ -3,7 +3,7 @@ path: oe2024
 projects:
   - name: Example Project
     path: example
-  - name: Fit Me!
+  - name: Fit Me
   - path: example
   - name: Personalized Depression Treatment 
   - path: example 
