--- a/_data/years/2024.yml
+++ b/_data/years/2024.yml
@@ -3,6 +3,14 @@ path: oe2024
 projects:
   - name: Example Project
     path: example
+  - name: Fit Me!
+    path: example
+  - name: Personalized Depression Treatment 
+    path: example 
+  - name: Tea Recommender 
+    path: example 
+  - name: When to Go Where 
+    path: example
 project_nav:
   - name: About Project
     path: index
