--- a/_data/years/2024.yml
+++ b/_data/years/2024.yml
@@ -1,15 +1,15 @@
 name: Fall 2024
 path: oe2024
 projects:
-  - name: Example Project
-    path: example
   - name: Fit Me!
-    path: example
+    path: https://fit-me--rpi-ontology-engineering.netlify.app/oe2024/fit-me
   - name: Personalized Depression Treatment 
-    path: example 
+    path: https://personalized-depression-treatment-ontology--rpi-ontology-engineering.netlify.app/oe2024/personalized-depression-treatment-ontology
   - name: Tea Recommender 
-    path: example 
+    path: https://tea-recommender--rpi-ontology-engineering.netlify.app/oe2024/tea-recommender 
   - name: When to Go Where 
+    path: https://when-to-go-where--rpi-ontology-engineering.netlify.app/oe2024/when-to-go-where
+  - name: Example Project
     path: example
 project_nav:
   - name: About Project
