--- a/_data/years/2024.yml
+++ b/_data/years/2024.yml
@@ -2,13 +2,13 @@ name: Fall 2024
 path: oe2024
 projects:
   - name: Fit Me!
-    path: https://fit-me--rpi-ontology-engineering.netlify.app/oe2024/fit-me
+    path: fit-me
   - name: Personalized Depression Treatment 
-    path: https://personalized-depression-treatment--rpi-ontology-engineering.netlify.app/oe2024/personalized-depression-treatment
+    path: personalized-depression-treatment
   - name: Political Journalism 
-    path: https://journalism--rpi-ontology-engineering.netlify.app/oe2024/political-journalism/
+    path: political-journalism
   - name: When to Go Where 
-    path: https://when-to-go-where--rpi-ontology-engineering.netlify.app/oe2024/when-to-go-where
+    path: when-to-go-where
   - name: Example Project
     path: example
 project_nav:
