--- a/_data/years/2024.yml
+++ b/_data/years/2024.yml
@@ -4,7 +4,7 @@ projects:
   - name: Fit Me!
     path: https://fit-me--rpi-ontology-engineering.netlify.app/oe2024/fit-me
   - name: Personalized Depression Treatment 
-    path: https://personalized-depression-treatment--rpi-ontology-engineering.netlify.app/oe2024/personalized-depression-treatment
+    path: personalized-depression-treatment
   - name: Tea Recommender 
     path: https://tea-recommender--rpi-ontology-engineering.netlify.app/oe2024/tea-recommender 
   - name: When to Go Where 
