Updated project path

--- a/_data/years/2024.yml
+++ b/_data/years/2024.yml
@@ -2,7 +2,7 @@ name: Fall 2024
 path: oe2024
 projects:
   - name: Fit Me!
-    path: https://fit-me--rpi-ontology-engineering.netlify.app/oe2024/fit-me
+    path: fit-me
   - name: Personalized Depression Treatment 
     path: https://personalized-depression-treatment--rpi-ontology-engineering.netlify.app/oe2024/personalized-depression-treatment
   - name: Tea Recommender 
