--- a/_data/years/2024.yml
+++ b/_data/years/2024.yml
@@ -8,7 +8,7 @@ projects:
   - name: Tea Recommender 
     path: https://tea-recommender--rpi-ontology-engineering.netlify.app/oe2024/tea-recommender 
   - name: When to Go Where 
-    path: https://when-to-go-where--rpi-ontology-engineering.netlify.app/oe2024/when-to-go-where
+    path: when-to-go-where
   - name: Example Project
     path: example
 project_nav:
