--- a/_data/years/2024.yml
+++ b/_data/years/2024.yml
@@ -2,11 +2,11 @@ name: Fall 2024
 path: oe2024
 projects:
   - name: Fit Me!
-    path: fit-me
+    path: https://fit-me--rpi-ontology-engineering.netlify.app/oe2024/fit-me
   - name: Personalized Depression Treatment 
     path: https://personalized-depression-treatment--rpi-ontology-engineering.netlify.app/oe2024/personalized-depression-treatment
   - name: Tea Recommender 
-    path: https://tea-recommender--rpi-ontology-engineering.netlify.app/oe2024/tea-recommender 
+    path: tea-recommender 
   - name: When to Go Where 
     path: https://when-to-go-where--rpi-ontology-engineering.netlify.app/oe2024/when-to-go-where
   - name: Example Project
