--- a/_data/years/2024.yml
+++ b/_data/years/2024.yml
@@ -6,7 +6,7 @@ projects:
   - name: Personalized Depression Treatment 
     path: https://personalized-depression-treatment--rpi-ontology-engineering.netlify.app/oe2024/personalized-depression-treatment
   - name: Political Journalism 
-    path: https://journalism--rpi-ontology-engineering.netlify.app/oe2024/political-journalism/
+    path: political-journalism
   - name: When to Go Where 
     path: https://when-to-go-where--rpi-ontology-engineering.netlify.app/oe2024/when-to-go-where
   - name: Example Project
